force-app/main/default/objects/Business_Unit__c/Business_Unit__c.object-meta.xml
<CustomObject>
    <description>Business Unit</description>
    <label>e2a Business Unit</label>
    <nameField>
        <label>Business Unit</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Business Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>