force-app/main/default/objects/Business_Unit__c/fields/Allow_All_From_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Allow_All_From_Addresses__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow all OWEA from addresses</description>
    <inlineHelpText>If checked, all organisation wide email from-addresses will be available in the mail editor for this business unit. If unchecked, only Allowed From-Addresses for this business unit will be available.</inlineHelpText>
    <label>Allow All From-Addresses</label>
    <type>Checkbox</type>
</CustomField>