force-app/main/default/objects/Business_Unit__c/fields/Allow_BCC_Deselect__c.field-meta.xml
<CustomField>
    <fullName>Allow_BCC_Deselect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow BCC deselect</description>
    <inlineHelpText>If checked, users may deselect Default BCC in the email editor. If unchecked, the Default Bcc for this business may not be deselected in the email editor, making it mandatory.</inlineHelpText>
    <label>Allow BCC Deselect</label>
    <type>Checkbox</type>
</CustomField>