force-app/main/default/objects/Business_Unit__c/fields/Busines_Unit_Title__c.field-meta.xml
<CustomField>
    <fullName>Busines_Unit_Title__c</fullName>
    <label>Busines Unit Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>