force-app/main/default/objects/Business_Unit__c/fields/Default_BCC_Address__c.field-meta.xml
<CustomField>
    <fullName>Default_BCC_Address__c</fullName>
    <description>Default BCC address</description>
    <inlineHelpText>Default BCC address for emails sent using the email editor for this business unit</inlineHelpText>
    <label>Default BCC Address</label>
    <type>Email</type>
</CustomField>