force-app/main/default/objects/Business_Unit__c/fields/Default_BCC_Address_New__c.field-meta.xml
<CustomField>
    <fullName>Default_BCC_Address_New__c</fullName>
    <label>Default BCC Address</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>