force-app/main/default/objects/Business_Unit__c/fields/Default_Email_Template_Filter__c.field-meta.xml
<CustomField>
    <fullName>Default_Email_Template_Filter__c</fullName>
    <label>Default Email Template Filter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All Lightning Templates</fullName>
            </value>
            <value>
                <fullName>My Lightning Templates</fullName>
            </value>
            <value>
                <fullName>Classic Email Templates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>