force-app/main/default/objects/Business_Unit__c/fields/Default_Email_Template_Folder__c.field-meta.xml
<CustomField>
    <fullName>Default_Email_Template_Folder__c</fullName>
    <label>Default Email Template Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>