force-app/main/default/objects/Business_Unit__c/fields/Default_OWEA_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_OWEA_Id__c</fullName>
    <description>Default Email From-Address</description>
    <inlineHelpText>Default email from-address for this business unit in the email editor.</inlineHelpText>
    <label>Default Email From-Address</label>
    <length>18</length>
    <type>Text</type>
</CustomField>