force-app/main/default/objects/Business_Unit__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description</description>
    <label>Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>