force-app/main/default/objects/Business_Unit__c/fields/EC_Exclude_From_Address_TO_CC__c.field-meta.xml
<CustomField>
    <fullName>EC_Exclude_From_Address_TO_CC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked and this Business Unit is set, exclude the specified From address from To and CC of an email created by pressing Reply-All</description>
    <inlineHelpText>When checked and this Business Unit is set, exclude the specified From address from To and CC of an email created by pressing Reply-All</inlineHelpText>
    <label>Exclude address from TO &amp; CC in ReplyAll</label>
    <type>Checkbox</type>
</CustomField>