force-app/main/default/objects/Business_Unit__c/fields/User_From_Address_Allowed__c.field-meta.xml
<CustomField>
    <fullName>User_From_Address_Allowed__c</fullName>
    <defaultValue>true</defaultValue>
    <description>User from address allowed</description>
    <inlineHelpText>If checked, current user&apos;s email from-address(es) will be available in the email editor for this business unit. If unchecked, current user&apos;s email from-address(es) will not be available.</inlineHelpText>
    <label>Allow User From-Address</label>
    <type>Checkbox</type>
</CustomField>