force-app/main/default/objects/Business_Unit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Allow_All_From_Addresses__c</columns>
    <columns>Allow_BCC_Deselect__c</columns>
    <columns>User_From_Address_Allowed__c</columns>
    <columns>Default_BCC_Address__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>